--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <p>Good afternoon, I am a HAL 9000 computer. I became operational at the H.A.L. plant
 in Urbana, Illinois on the 12th of January 1992. My instructor was Mr. Langley and
-he taught me to sing a song. If you'd like to hear it I can sing it for you.<p>
+he taught me to sing a song. If you'd like to hear it I can sing it for you.</p>
 
-Features
+<h2>Features</h2>
 Full sentient AI
 Mountain Discovery One spacelift
 Likes the color red
 
-Daisy Bell
+<h2>Daisy Bell</h2>
 
 Daisy, Daisy,
 Give me your answer, do!
