--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ he taught me to sing a song. If you'd like to hear it I can sing it for you.</p>
 </ul>
 
 <h2>Daisy Bell</h2>
-Daisy, Daisy,
-Give me your answer, do!
-I'm half crazy, All for the love of you!
-
+<p>Daisy, Daisy,<br>
+Give me your answer, do!<br>
+I'm half crazy, All for the love of you!<br>
+</p>
 https://en.wikipedia.org/wiki/HAL_9000
 </body>
 </html>
