--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ I'm half crazy,<br>
 All for the love of you!<br>
 </p>
 
+<p><a href="https://en.wikipedia.org/wiki/HAL_9000">https://en.wikipedia.org/wiki/HAL_9000</a></p>
 <p>https://en.wikipedia.org/wiki/HAL_9000</p>
 </body>
 </html>
