--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@ All for the love of you!<br>
 </p>
 
 <p><a href="https://en.wikipedia.org/wiki/HAL_9000">https://en.wikipedia.org/wiki/HAL_9000</a></p>
-<p>https://en.wikipedia.org/wiki/HAL_9000</p>
+<p><a href="https://en.wikipedia.org/wiki/HAL_9000">HAL 9000</a></p>
 </body>
 </html>
